correct some layout bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -228,10 +228,10 @@
     @apply h-full rounded-[20px] bg-white p-5 xl:p-8 !important;
   }
   .recent-file-details {
-    @apply flex w-full flex-col xl:flex-row xl:justify-between !important;
+    @apply flex w-full flex-row justify-between !important;
   }
   .recent-file-name {
-    @apply subtitle-2 text-light-100 truncate sm:max-w-[200px] lg:max-w-[250px] !important;
+    @apply subtitle-2 text-light-100 truncate max-w-[200px] lg:max-w-[250px] !important;
   }
   .recent-file-date {
     @apply body-2 text-light-100/80 !important;
